--- a/index.html
+++ b/index.html
@@ -49,8 +49,14 @@
                 <h3 class="jumbotron-heading pb-5">Thesis Paper
                 </h3>
                 <div class="pb-5">
-                    <iframe width="100%" height="600" src="https://www.docdroid.net/dfIST5p/thesis.pdf" frameborder="0"
-                        allowtransparency allowfullscreen></iframe>
+                    <iframe src="https://www.slideshare.net/slideshow/embed_code/key/2FItcawSqlomxV" width="100%"
+                        height="714" frameborder="0" marginwidth="0" marginheight="0" scrolling="no"
+                        style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;"
+                        allowfullscreen> </iframe>
+                    <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/codebangla/thesis-199767710"
+                                title="Thesis" target="_blank">Thesis</a> </strong> from <strong><a
+                                href="https://www.slideshare.net/codebangla" target="_blank">codebangla</a></strong>
+                    </div>
                 </div>
             </div>
     </main>
