--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@
                 <h2 class="jumbotron-heading pb-5">Enhancing CMS based
                     e-commerce solution with cross platform mobile app
                 </h2>
-                <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/QHUiNbY9vgk?start=30"
-                        allowfullscreen></iframe></div>
-            </div>
+                
         </section>
 
         <div class="album py-5 bg-light">
@@ -46,7 +43,7 @@
                                 target="_blank">Presentation</a> </strong> from <strong><a
                                 href="//www.slideshare.net/codebangla" target="_blank">codebangla</a></strong> </div>
                 </div>
-                <h3 class="jumbotron-heading pb-5">Thesis Paper
+                <h3 class="jumbotron-heading pb-5">Paper
                 </h3>
                 <div class="pb-5">
                     <iframe src="https://www.slideshare.net/slideshow/embed_code/key/2FItcawSqlomxV" width="100%"
